--- a/index.html
+++ b/index.html
@@ -10,27 +10,57 @@
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script>
 </head>
 <body>
+    <style>
+        #dialogue-box {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border: 2px solid black;
+            z-index: 1000;
+            pointer-events: auto;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+    </style>
     <a-scene physics="debug: true">
         <a-assets>
-             <!-- Charger le modèle du premier PNJ -->
-            <a-asset-item id="pnj1" src="./NPC/Man.glb"></a-asset-item>
-             <!-- Charger le modèle du deuxième PNJ -->
-            <a-asset-item id="pnj2" src="./NPC/Business Man.glb"></a-asset-item>
-            <!-- Charger le modèle du troisième PNJ -->
-            <a-asset-item id="pnj3" src="./NPC/Hoodie Character.glb"></a-asset-item>
-        </a-assets>
+             <a-asset-item id="pnj1" src="./NPC/Man.glb"></a-asset-item>
+             <a-asset-item id="pnj2" src="./NPC/Business%20Man.glb"></a-asset-item>
+             <a-asset-item id="pnj3" src="./NPC/Hoodie%20Character.glb"></a-asset-item>
+         </a-assets>
+ 
+         <a-entity id="camera-entity" camera look-controls wasd-controls="acceleration: 25" position="0 1.6 5">
+             <a-cursor></a-cursor>
+         </a-entity>
+ 
+         <a-entity id="pnj1-container" position="2 0 -5">
+             <a-entity id="pnj1-entity" gltf-model="#pnj1" scale="0.2 0.2 0.2"></a-entity>
+             <a-box position="0 1 0" width="1" height="2" depth="1" opacity="0" transparent="true" class="clickable" event-set__click="_event: click; _target: #dialogue-box; visible: true"></a-box>
+         </a-entity>
+ 
+         <a-entity id="pnj2-container" position="-2 0 -5">
+             <a-entity id="pnj2-entity" gltf-model="#pnj2" scale="0.5 0.5 0.5"></a-entity>
+             <a-box position="0 1 0" width="1" height="2" depth="1" opacity="0" transparent="true" class="clickable" event-set__click="_event: click; _target: #dialogue-box; visible: true"></a-box>
+         </a-entity>
+ 
+         <a-entity id="pnj3-container" position="0 0 -5">
+             <a-entity id="pnj3-entity" gltf-model="#pnj3" scale="0.5 0.5 0.5"></a-entity>
+             <a-box position="0 1 0" width="1" height="2" depth="1" opacity="0" transparent="true" class="clickable" event-set__click="_event: click; _target: #dialogue-box; visible: true"></a-box>
+         </a-entity>
 
-        <!-- Ajouter la caméra en tant que personnage -->
-        <a-entity id="camera-entity" camera look-controls wasd-controls="acceleration: 25" position="0 0.8 5" dynamic-body="mass: 0.1"></a-entity>
-
-        <!-- Ajouter le personnage 1 -->
-        <a-entity id="pnj1-entity" gltf-model="#pnj1" position="2 0 -5" scale="0.2 0.2 0.2"></a-entity>
-
-        <!-- Ajouter le personnage 2 -->
-        <a-entity id="pnj2-entity" gltf-model="#pnj2" position="-2 0 -5" scale="0.5 0.5 0.5"></a-entity>
-
-        <!-- Ajouter le personnage 3 -->
-        <a-entity id="pnj3-entity" gltf-model="#pnj3" position="0 0 -5" scale="0.5 0.5 0.5"></a-entity>
 
         <!-- Lumière -->
         <a-light type="directional" position="2 4 3" intensity="0.6"></a-light>
@@ -43,78 +73,101 @@
         <a-box position="0 1 10" width="20" height="2" depth="0.1" visible="true" static-body="shape: box;"></a-box>
         <a-box position="-10 1 0" width="0.1" height="2" depth="20" visible="true" static-body="shape: box;"></a-box>
         <a-box position="10 1 0" width="0.1" height="2" depth="20" visible="true" static-body="shape: box;"></a-box>
-        <a-box position="10 1 0" width="0.1" height="2" depth="20" visible="true" static-body="shape: box;"></a-box>
     </a-scene>
-
+    <div id="overlay"></div>
+    <div id="dialogue-box">
+        <p id="dialogue-text">Bonjour !</p>
+        <button onclick="closeDialogue()">Fermer</button>
     <script>
         // Fonction d'easing pour un mouvement plus fluide
-        function easeInOutQuad(t) {
-            return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
-        }
+  function easeInOutQuad(t) {
+    return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
+}
 
-        // Logique de déplacement fluide et de rotation pour le personnage
-        function movePNJRandomly(pnjId, min, max) {
-            const pnj = document.querySelector(`#${pnjId}`);
-            
-            // Nouvelle position aléatoire
-            const targetX = Math.random() * (max - min) + min;
-            const targetZ = Math.random() * (max - min) + min;
+// Logique de déplacement fluide et de rotation pour le personnage
+function movePNJRandomly(pnjId, min, max) {
+    const pnj = document.querySelector(`#${pnjId}`);
+    
+    // Nouvelle position aléatoire
+    const targetX = Math.random() * (max - min) + min;
+    const targetZ = Math.random() * (max - min) + min;
 
-            // Initialiser la position actuelle
-            const currentPosition = pnj.getAttribute('position');
-            const currentX = currentPosition.x;
-            const currentZ = currentPosition.z;
+    // Initialiser la position actuelle
+    const currentPosition = pnj.getAttribute('position');
+    const currentX = currentPosition.x;
+    const currentZ = currentPosition.z;
 
-            // Calculer la direction du mouvement
-            const dx = targetX - currentX;
-            const dz = targetZ - currentZ;
-            const targetAngle = Math.atan2(dz, dx) * (180 / Math.PI); // Convertir l'angle en degrés
+    // Calculer la direction du mouvement
+    const dx = targetX - currentX;
+    const dz = targetZ - currentZ;
+    const targetAngle = Math.atan2(dz, dx) * (180 / Math.PI); // Convertir l'angle en degrés
 
-            // Durée du mouvement en millisecondes
-            const duration = 3000; // 3 secondes
+    // Durée du mouvement en millisecondes
+    const duration = 3000; // 3 secondes
 
-            // Animation fluide de la rotation et du déplacement
-            let startTime;
-            function animateMovement(time) {
-                if (!startTime) startTime = time;
-                const elapsedTime = time - startTime;
+    // Animation fluide de la rotation et du déplacement
+    let startTime;
+    function animateMovement(time) {
+        if (!startTime) startTime = time;
+        const elapsedTime = time - startTime;
 
-                // Calcul du pourcentage du mouvement
-                const progress = Math.min(elapsedTime / duration, 1);
-                const easedProgress = easeInOutQuad(progress);
+        // Calcul du pourcentage du mouvement
+        const progress = Math.min(elapsedTime / duration, 1);
+        const easedProgress = easeInOutQuad(progress);
 
-                // Interpolation linéaire entre la position actuelle et la nouvelle position
-                const newX = currentX + dx * easedProgress;
-                const newZ = currentZ + dz * easedProgress;
+        // Interpolation linéaire entre la position actuelle et la nouvelle position
+        const newX = currentX + dx * easedProgress;
+        const newZ = currentZ + dz * easedProgress;
 
-                // Mettre à jour la position
-                pnj.setAttribute('position', { x: newX, y: currentPosition.y, z: newZ });
+        // Mettre à jour la position
+        pnj.setAttribute('position', { x: newX, y: currentPosition.y, z: newZ });
 
-                // Récupérer l'angle actuel du PNJ
-                const currentRotation = pnj.getAttribute('rotation');
-                const currentAngle = currentRotation.y;
+        // Récupérer l'angle actuel du PNJ
+        const currentRotation = pnj.getAttribute('rotation');
+        const currentAngle = currentRotation.y;
 
-                // Interpolation de la rotation pour une transition fluide
-                const newRotationY = currentAngle + (targetAngle - currentAngle) * easedProgress;
+        // Interpolation de la rotation pour une transition fluide
+        const newRotationY = currentAngle + (targetAngle - currentAngle) * easedProgress;
 
-                pnj.setAttribute('rotation', { x: 0, y: newRotationY, z: 0 });
+        pnj.setAttribute('rotation', { x: 0, y: newRotationY, z: 0 });
 
-                // Continuer l'animation tant que le mouvement n'est pas terminé
-                if (progress < 1) {
-                    requestAnimationFrame(animateMovement);
-                }
-            }
-
-            // Lancer l'animation
+        // Continuer l'animation tant que le mouvement n'est pas terminé
+        if (progress < 1) {
             requestAnimationFrame(animateMovement);
         }
+    }
 
-        // Déplacer le personnage de manière aléatoire toutes les 10 secondes
-        setInterval(() => {
-            movePNJRandomly('pnj1-entity', -10, 10);
-            movePNJRandomly('pnj2-entity', -10, 10);
-            movePNJRandomly('pnj3-entity', -10, 10);
-        }, 10000);
+    // Lancer l'animation
+    requestAnimationFrame(animateMovement);
+}
+
+// Déplacer le personnage de manière aléatoire toutes les 10 secondes
+setInterval(() => {
+    movePNJRandomly('pnj1-entity', -10, 10);
+    movePNJRandomly('pnj2-entity', -10, 10);
+    movePNJRandomly('pnj3-entity', -10, 10);
+}, 10000);
+// Ajouter un événement de clic pour chaque PNJ
+function closeDialogue() {
+    document.getElementById('dialogue-box').style.display = 'none';
+    document.getElementById('overlay').style.display = 'none';
+}
+
+function openDialogue(pnjId) {
+    let text = "Je suis un PNJ inconnu.";
+    if (pnjId === 'pnj1-hitbox') text = "Salut, je suis le PNJ 1 !";
+    if (pnjId === 'pnj2-hitbox') text = "Bonjour, je suis le PNJ 2 !";
+    if (pnjId === 'pnj3-hitbox') text = "Hey ! Je suis le PNJ 3 !";
+    document.getElementById('dialogue-text').innerText = text;
+    document.getElementById('dialogue-box').style.display = 'block';
+    document.getElementById('overlay').style.display = 'block';
+}
+
+document.querySelectorAll('.clickable').forEach(hitbox => {
+    hitbox.addEventListener('click', function () {
+        openDialogue(this.id);
+    });
+});
     </script>
 </body>
 </html>
