--- a/index.html
+++ b/index.html
@@ -42,38 +42,67 @@
 
       <a-entity gltf-model="#building21" position="8 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="3 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-2 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-7 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-12 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-17 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-22 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-27 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-32 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-2 0 -0.5" scale="8 8 8" rotation="0 181 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-7 0 -0.5" scale="8 8 8" rotation="0 181.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-12 0 -0.5" scale="8 8 8" rotation="0 182 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-17 0 -0.5" scale="8 8 8" rotation="0 182.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-22 0 -0.5" scale="8 8 8" rotation="0 183 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-27 0 -0.5" scale="8 8 8" rotation="0 183.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-32 0 -0.5" scale="8 8 8" rotation="0 184 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-37 0 -0.5" scale="8 8 8" rotation="0 184.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-42 0 -0.5" scale="8 8 8" rotation="0 185 0"></a-entity>
 
-      <a-entity gltf-model="#building21" position="-62 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-67 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-72 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-77 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-82 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-87 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-92 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-97 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-102 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+
+      <a-entity gltf-model="#building21" position="-52 0 0.5" scale="8 8 8" rotation="0 185 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-57 0 0.6" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-62 0 0.7" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-67 0 0.8" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-72 0 0.9" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-77 0 1" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-82 0 1.1" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-87 0 1.2" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-92 0 1.3" scale="8 8 8" rotation="0 180 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-102 0 1.4" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="-107 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="-112 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="-117 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="-122 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="-127 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
       <a-entity gltf-model="#building21" position="-132 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+      
 
+      <a-entity gltf-model="#building21" position="-97 0 80" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 75" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 70" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 65" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 60" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 55" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 50" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 45" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 40" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 35" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 26" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 21" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 16" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 11" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-97 0 6" scale="8 8 8" rotation="0 90 0"></a-entity>
 
       <a-entity gltf-model="#building21" position="-45 0 20" scale="8 8 8" rotation="0 90 0"></a-entity>
       <a-entity gltf-model="#building21" position="-45 0 25" scale="8 8 8" rotation="0 90 0"></a-entity>
+
+
+
       
-      <a-entity gltf-model="#building21" position="-45 0 35" scale="8 8 8" rotation="0 90 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-45 0 40" scale="8 8 8" rotation="0 90 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-45 0 45" scale="8 8 8" rotation="0 90 0"></a-entity>
-      <a-entity gltf-model="#building21" position="-45 0 50" scale="8 8 8" rotation="0 90 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-46.5 0 4.5" scale="8 8 8" rotation="0 95 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-46 0 9.5" scale="8 8 8" rotation="0 94.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45.5 0 14.5" scale="8 8 8" rotation="0 94 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45 0 19.5" scale="8 8 8" rotation="0 93.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45 0 25" scale="8 8 8" rotation="0 93 0"></a-entity>a
+      <a-entity gltf-model="#building21" position="-45 0 30" scale="8 8 8" rotation="0 92.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45 0 35" scale="8 8 8" rotation="0 92 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45 0 40" scale="8 8 8" rotation="0 91.5 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45 0 45" scale="8 8 8" rotation="0 91 0"></a-entity>
+      <a-entity gltf-model="#building21" position="-45 0 50" scale="8 8 8" rotation="0 90.5 0"></a-entity>
       <a-entity gltf-model="#building21" position="-45 0 55" scale="8 8 8" rotation="0 90 0"></a-entity>
       <a-entity gltf-model="#building21" position="-45 0 60" scale="8 8 8" rotation="0 90 0"></a-entity>
       <a-entity gltf-model="#building21" position="-45 0 65" scale="8 8 8" rotation="0 90 0"></a-entity>
@@ -204,7 +233,7 @@
 <a-entity gltf-model="#building19" position="-118 0 40" scale="7 7 7" rotation="0 270 0"></a-entity>
 
 
-      <a-entity id="cameraRig" position="6 20 -6" custom-controls>
+      <a-entity id="cameraRig" position="-98.9 20 2" custom-controls>
         <a-entity camera look-controls wasd-controls="enabled: false"></a-entity>
       </a-entity>
 
@@ -303,7 +332,9 @@
   </script>
 
   <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 30"></a-entity>
-  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 30"></a-entity>
+  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" ; position="-97 0.1 30" ></a-entity>
+  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-97 0.1 1.5" rotation="0 90 0"></a-entity>
+  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-47 0 -0" rotation="0 95 0"></a-entity>
     </a-scene>
   </body>
 </html>
