--- a/examples/castle/index.html
+++ b/examples/castle/index.html
@@ -63,14 +63,14 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="navmesh" src="../assets/city/city-Mesh.glb"></a-asset-item>
+      <a-asset-item id="navmesh" src="../assets/city/navmesh.gltf"></a-asset-item>
       <a-asset-item id="city" src="../assets/city/city.glb"></a-asset-item>
     </a-assets>
 
     <!-- Player. -->
-    <a-entity id="rig" movement-controls="constrainToNavMesh: true;
-                                   controls: checkpoint, gamepad, trackpad, keyboard, nipple;" position="10 1 0">
-            <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
+    <a-entity scale="" id="rig" movement-controls="constrainToNavMesh: true;
+                                   controls: checkpoint, gamepad, trackpad, keyboard, nipple;" position="10 0 0">
+            <a-entity camera position="0 0.5 0" look-controls="pointerLockEnabled: true">
                 <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005"
                     material="color: #202020; shader: flat">
                 </a-entity>
@@ -83,7 +83,7 @@
 
 
     <!-- Nav mesh. -->
-    <a-entity nav-mesh normal-material visible="true" position="0 1 -1" gltf-model="#navmesh"></a-entity>
+    <a-entity nav-mesh normal-material visible="true" position="50 1 -1" gltf-model="#navmesh"></a-entity>
     
     <!-- SKY -->
         <a-sky color="#ADD8E6"></a-sky>
@@ -94,12 +94,7 @@
             position="-11.66809 4.066 5.08364">
         </a-entity>
 
-        <a-box src="#ground" position="-0.02" scale="14 20 0.04" repeat="7 7 0" rotation="-90 0 0"
-            shadow="receive: true" material="roughness: 1" static-body></a-box>
-        <a-plane src="#grass" position="-20 0 0" scale="25 50 1" repeat="5 5 1" rotation="-90 0 0"
-            shadow="receive: true" material="roughness: 1" static-body></a-plane>
-
-    <a-entity visible="false" position="0 0 0" gltf-model="#city">
+    <a-entity visible="true" position="0 0 0" gltf-model="#city">
     </a-entity>
   </a-scene>
 </body>
