--- a/examples/castle/index.html
+++ b/examples/castle/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
   <title>Examples • Castle</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <script src="../../dist/aframe-extras.js"></script>
+  <script src="../../dist/aframe-extras.js?V=1"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.3.7/dist/aframe-environment-component.min.js"></script>
   <script>
@@ -63,14 +63,14 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="navmesh" src="../assets/city/navmesh.gltf"></a-asset-item>
+      <a-asset-item id="navmesh" src="../assets/city/navmesh.gltf?V=1"></a-asset-item>
       <a-asset-item id="city" src="../assets/city/city.glb"></a-asset-item>
     </a-assets>
 
     <!-- Player. -->
     <a-entity scale="" id="rig" movement-controls="constrainToNavMesh: true;
                                    controls: checkpoint, gamepad, trackpad, keyboard, nipple;" position="10 0 0">
-            <a-entity camera position="0 0.5 0" look-controls="pointerLockEnabled: true">
+            <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
                 <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005"
                     material="color: #202020; shader: flat">
                 </a-entity>
@@ -83,7 +83,7 @@
 
 
     <!-- Nav mesh. -->
-    <a-entity nav-mesh normal-material visible="true" position="50 1 -1" gltf-model="#navmesh"></a-entity>
+    <a-entity nav-mesh normal-material visible="false" position="0 0 0" gltf-model="#navmesh"></a-entity>
     
     <!-- SKY -->
         <a-sky color="#ADD8E6"></a-sky>
