--- a/index.html
+++ b/index.html
@@ -47,6 +47,63 @@
       <a-plane position="0 0 0" rotation="-90 0 0" width="300" height="300" color="#777"></a-plane>
 
 
+      <a-entity id="cameraRig" position="0 20 -100" custom-controls>
+        <a-entity camera look-controls wasd-controls="enabled: false"></a-entity>
+      </a-entity>
+
+      <a-box position="-5.8 1.3 4.8" scale="36.5 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="16 0 -0.5" scale="8 0.1 8" color="#0000FF"></a-box>
+      <a-box position="10 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="5 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="0 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-5 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-10 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-15 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-20 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-25 1.3 -6" scale="4.7 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-32.5 1.3 -6" scale="9.3 0.1 4.7" color="#0000FF"></a-box>
+      <a-box position="-34.8 1.3 -13.6" scale="4.7 0.1 12" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 -10" scale="10 0.1 10" color="#0000FF"></a-box>
+      <a-box position="-67.5 1.3 -10" scale="5 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-75 1.3 -10" scale="10 0.1 10" color="#0000FF"></a-box>
+      <a-box position="-82.5 1.3 -10" scale="5 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-90 1.3 -10" scale="10 0.1 10" color="#0000FF"></a-box>
+      <a-box position="-97.5 1.3 -10" scale="5 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-105 1.3 -10" scale="10 0.1 10" color="#0000FF"></a-box>
+      <a-box position="-112.5 1.3 -10" scale="5 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-120 1.3 -10" scale="10 0.1 10" color="#0000FF"></a-box>
+      <a-box position="-127.5 1.3 -10" scale="5 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-135 1.3 -10" scale="10 0.1 10" color="#0000FF"></a-box>
+      <a-box position="-28 1.3 11" scale="8.8 0.1 8.8" color="#0000FF"></a-box>
+      <a-box position="-124.5 1.3 12.9" scale="32 0.1 7.3" color="#0000FF"></a-box>
+      <a-box position="-72.5 1.3 12.9" scale="32 0.1 7.3" color="#0000FF"></a-box>
+      <a-box position="-72.5 1.3 12.9" scale="32 0.1 7.3" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 40" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-82 1.3 40" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-82 1.3 60" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 60" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 80" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 100" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 120" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-118 1.3 40" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-140 1.3 40" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-118 1.3 60" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-140 1.3 60" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-140 1.3 80" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-140 1.3 100" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-140 1.3 120" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-140 1.3 140" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-60 1.3 140" scale="9 0.1 9" color="#0000FF"></a-box>
+      <a-box position="-100 1.3 100" scale="15.5 0.1 15.5" color="#0000FF"></a-box>
+      <a-box position="-119.5 1.3 134" scale="3 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-119.5 1.3 134" scale="3 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-110.3 1.3 134" scale="3 0.1 4" color="#0000FF"></a-box>
+      <a-box position="-94.6 1.3 134" scale="3 0.1 5" color="#0000FF"></a-box>
+      <a-box position="-85.5 1.3 134" scale="3 0.1 4" color="#0000FF"></a-box>
+      <a-box position="-0 1.3 85.1" scale="3 0.1 4.4" color="#0000FF"></a-box>
+      <a-box position="-20 1.3 85.1" scale="3 0.1 4.4" color="#0000FF"></a-box>
+      <a-box position="-50 1.3 -120" scale="62.5 0.1 20" color="#0000FF"></a-box>
+      
 
 <!-- /* coté moyen riche */ -->
       <a-entity gltf-model="#building1" position="10 0 -6" scale="5 5 5" rotation="0 180 0"></a-entity>
@@ -265,121 +322,6 @@
 <a-entity gltf-model="#building21" position="-94.5 0 30" scale="8 8 8" rotation="0 180 0"></a-entity>
 <!-- Tree -->
 
-      <a-entity id="cameraRig" position="-10 50 50" custom-controls>
-        <a-entity camera look-controls wasd-controls="enabled: false"></a-entity>
-      </a-entity>
-
-      <script>
-
-        AFRAME.registerComponent('custom-controls', {
-          schema: { speed: { type: 'number', default: 20 } },
-          init: function () {
-        this.keys = {};
-        this.onKeyDown = this.onKeyDown.bind(this);
-        this.onKeyUp = this.onKeyUp.bind(this);
-        window.addEventListener('keydown', this.onKeyDown);
-        window.addEventListener('keyup', this.onKeyUp);
-          },
-          remove: function () {
-        window.removeEventListener('keydown', this.onKeyDown);
-        window.removeEventListener('keyup', this.onKeyUp);
-          },
-          onKeyDown: function (e) {
-        this.keys[e.key.toLowerCase()] = true;
-          },
-          onKeyUp: function (e) {
-        this.keys[e.key.toLowerCase()] = false;
-          },
-          tick: function (time, deltaTime) {
-        var delta = deltaTime / 1000;
-        var distance = this.data.speed * delta;
-        var rig = this.el.object3D;
-        var cameraEl = this.el.querySelector('[camera]');
-        var cameraObj = cameraEl.object3D;
-        var moveDir = new THREE.Vector3();
-        var forward = new THREE.Vector3(0, 0, -1);
-        forward.applyQuaternion(cameraObj.quaternion).normalize();
-        var up = new THREE.Vector3(0, 1, 0);
-        var right = new THREE.Vector3().crossVectors(forward, up).normalize();
-
-        if (this.keys['z']) { moveDir.add(forward); }
-        if (this.keys['s']) { moveDir.add(forward.clone().negate()); }
-        if (this.keys['d']) { moveDir.add(right); }
-        if (this.keys['q']) { moveDir.add(right.clone().negate()); }
-        if (this.keys[' ']) { moveDir.add(up); }
-        if (this.keys['control']) { moveDir.add(up.clone().negate()); }
-
-        if (moveDir.length() > 0) {
-          moveDir.normalize();
-          rig.position.add(moveDir.multiplyScalar(distance));
-        }
-          }
-        });
-      AFRAME.registerComponent('fence', {
-        schema: {
-          length: { type: 'number', default: 5 },
-          height: { type: 'number', default: 4 },
-          color: { type: 'color', default: '#8B4513' }
-        },
-        init: function () {
-          var data = this.data;
-          var el = this.el;
-
-          var geometry = new THREE.BoxGeometry(data.length, data.height, 0.1);
-          var material = new THREE.MeshStandardMaterial({ color: data.color });
-          var mesh = new THREE.Mesh(geometry, material);
-
-          el.setObject3D('mesh', mesh);
-        }
-      });
-  AFRAME.registerComponent('road', {
-    schema: {
-      length: { type: 'number', default: 5 },
-      width: { type: 'number', default: 2 },
-      color: { type: 'color', default: '#000000' },
-      dashed: { type: 'boolean', default: true }
-    },
-    init: function () {
-      var data = this.data;
-      var el = this.el;
-
-      var geometry = new THREE.PlaneGeometry(data.width, data.length);
-      var material = new THREE.MeshStandardMaterial({ color: data.color });
-      var mesh = new THREE.Mesh(geometry, material);
-
-      mesh.rotation.x = -Math.PI / 2;
-      el.setObject3D('mesh', mesh);
-
-      if (data.dashed) {
-        var dashLength = 0.5;
-        var dashWidth = 0.1;
-        var dashColor = '#FFFFFF';
-        var dashMaterial = new THREE.MeshStandardMaterial({ color: dashColor });
-        var dashGeometry = new THREE.PlaneGeometry(dashWidth, dashLength);
-
-        for (var i = -data.length / 2; i < data.length / 2; i += dashLength * 2) {
-          var dash = new THREE.Mesh(dashGeometry, dashMaterial);
-          dash.position.set(0, 0.01, i + dashLength / 2);
-          dash.rotation.x = -Math.PI / 2;
-          el.object3D.add(dash);
-        }
-
-        // Add dashed line in the middle horizontally
-        var sideDashLength = 0.1;
-        var sideDashWidth = 0.5;
-        var sideDashGeometry = new THREE.PlaneGeometry(sideDashWidth, sideDashLength);
-
-        for (var j = -data.width / 2; j < data.width / 2; j += sideDashWidth * 2) {
-          var sideDash = new THREE.Mesh(sideDashGeometry, dashMaterial);
-          sideDash.position.set(j + sideDashWidth / 2, 0.01, 0);
-          sideDash.rotation.x = -Math.PI / 2;
-          el.object3D.add(sideDash);
-        }
-      }
-    }
-  });
-  </script>
-
   <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 30"></a-entity>
   <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-97 0.1 1.5" rotation="0 90 0"></a-entity>
   <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 130" rotation="0 0 0"></a-entity>
@@ -399,4 +341,114 @@
   <a-entity fence="length: 50; width: 10; color: #131e27; dashed: true" position="-40 0 85" rotation="0 90 0"></a-entity>
 </a-scene>
   </body>
+  <script>
+
+    AFRAME.registerComponent('custom-controls', {
+      schema: { speed: { type: 'number', default: 20 } },
+      init: function () {
+    this.keys = {};
+    this.onKeyDown = this.onKeyDown.bind(this);
+    this.onKeyUp = this.onKeyUp.bind(this);
+    window.addEventListener('keydown', this.onKeyDown);
+    window.addEventListener('keyup', this.onKeyUp);
+      },
+      remove: function () {
+    window.removeEventListener('keydown', this.onKeyDown);
+    window.removeEventListener('keyup', this.onKeyUp);
+      },
+      onKeyDown: function (e) {
+    this.keys[e.key.toLowerCase()] = true;
+      },
+      onKeyUp: function (e) {
+    this.keys[e.key.toLowerCase()] = false;
+      },
+      tick: function (time, deltaTime) {
+    var delta = deltaTime / 1000;
+    var distance = this.data.speed * delta;
+    var rig = this.el.object3D;
+    var cameraEl = this.el.querySelector('[camera]');
+    var cameraObj = cameraEl.object3D;
+    var moveDir = new THREE.Vector3();
+    var forward = new THREE.Vector3(0, 0, -1);
+    forward.applyQuaternion(cameraObj.quaternion).normalize();
+    var up = new THREE.Vector3(0, 1, 0);
+    var right = new THREE.Vector3().crossVectors(forward, up).normalize();
+
+    if (this.keys['z']) { moveDir.add(forward); }
+    if (this.keys['s']) { moveDir.add(forward.clone().negate()); }
+    if (this.keys['d']) { moveDir.add(right); }
+    if (this.keys['q']) { moveDir.add(right.clone().negate()); }
+    if (this.keys[' ']) { moveDir.add(up); }
+    if (this.keys['control']) { moveDir.add(up.clone().negate()); }
+
+    if (moveDir.length() > 0) {
+      moveDir.normalize();
+      rig.position.add(moveDir.multiplyScalar(distance));
+    }
+      }
+    });
+  AFRAME.registerComponent('fence', {
+    schema: {
+      length: { type: 'number', default: 5 },
+      height: { type: 'number', default: 4 },
+      color: { type: 'color', default: '#8B4513' }
+    },
+    init: function () {
+      var data = this.data;
+      var el = this.el;
+
+      var geometry = new THREE.BoxGeometry(data.length, data.height, 0.1);
+      var material = new THREE.MeshStandardMaterial({ color: data.color });
+      var mesh = new THREE.Mesh(geometry, material);
+
+      el.setObject3D('mesh', mesh);
+    }
+  });
+AFRAME.registerComponent('road', {
+schema: {
+  length: { type: 'number', default: 5 },
+  width: { type: 'number', default: 2 },
+  color: { type: 'color', default: '#000000' },
+  dashed: { type: 'boolean', default: true }
+},
+init: function () {
+  var data = this.data;
+  var el = this.el;
+
+  var geometry = new THREE.PlaneGeometry(data.width, data.length);
+  var material = new THREE.MeshStandardMaterial({ color: data.color });
+  var mesh = new THREE.Mesh(geometry, material);
+
+  mesh.rotation.x = -Math.PI / 2;
+  el.setObject3D('mesh', mesh);
+
+  if (data.dashed) {
+    var dashLength = 0.5;
+    var dashWidth = 0.1;
+    var dashColor = '#FFFFFF';
+    var dashMaterial = new THREE.MeshStandardMaterial({ color: dashColor });
+    var dashGeometry = new THREE.PlaneGeometry(dashWidth, dashLength);
+
+    for (var i = -data.length / 2; i < data.length / 2; i += dashLength * 2) {
+      var dash = new THREE.Mesh(dashGeometry, dashMaterial);
+      dash.position.set(0, 0.01, i + dashLength / 2);
+      dash.rotation.x = -Math.PI / 2;
+      el.object3D.add(dash);
+    }
+
+    // Add dashed line in the middle horizontally
+    var sideDashLength = 0.1;
+    var sideDashWidth = 0.5;
+    var sideDashGeometry = new THREE.PlaneGeometry(sideDashWidth, sideDashLength);
+
+    for (var j = -data.width / 2; j < data.width / 2; j += sideDashWidth * 2) {
+      var sideDash = new THREE.Mesh(sideDashGeometry, dashMaterial);
+      sideDash.position.set(j + sideDashWidth / 2, 0.01, 0);
+      sideDash.rotation.x = -Math.PI / 2;
+      el.object3D.add(sideDash);
+    }
+  }
+}
+});
+</script>
 </html>
