--- a/examples/castle/index.html
+++ b/examples/castle/index.html
@@ -54,113 +54,49 @@
 
     <a-plane position="0 0 0" rotation="-90 0 0" width="300" height="300" color="#777"></a-plane>
     <!-- Player. -->
-    <a-entity scale="" id="rig" movement-controls="constrainToNavMesh: true;
-                                   controls: checkpoint, gamepad, trackpad, keyboard, nipple;" position="10 0 0">
-            <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
-                <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005"
-                    material="color: #202020; shader: flat">
-                    <a-plane id="score-panel"  position="0.5 0.2 -1" width="0.3" height="0.1" color="#FFD700" material="shader: flat">
-                      <a-text id="score" 
-                                      value="Score: 0" 
-                                      position="0 0.02 0" 
-                                      align="center" 
-                                      color="black" 
-                                      width="1" 
-                                      font="mozillavr">
-                      </a-text>
-                  </a-plane>
-                </a-entity>
-            </a-entity>
-            <a-entity id="leftController" oculus-touch-controls="hand: left" thumbstick-move></a-entity>
-            <a-entity id="rightController" oculus-touch-controls="hand: right">
-                <a-entity raycaster="objects: .collidable" cursor></a-entity>
-            </a-entity>
-            <a-plane id="overlay" position="0 3 -2" visible="false"></a-plane>
-        <a-plane id="dialogue-box" 
-                 position="0 2 -2" 
-                 width="4" 
-                 height="0.5" 
-                 visible="false"
-                 material="color: black; opacity: 0.8; shader: flat"
-                 geometry="primitive: plane; width:5; height: 1.4">
-
-
-
-    <a-text id="dialogue-text" 
-    value="Hi! How can I help you?" 
-    position="0 0.2 0.01" 
-    width="2" 
-    align="center"
-    text="color: white; wrapCount: 30; font: mozillavr">
-</a-text>
-
-<a-text id="difficulty-text" 
-    value="Difficulty:" 
-    position="-1.4 0.5 0.01" 
-    width="1.5"
-    text="color: yellow; wrapCount: 20; font: mozillavr">
-</a-text>
-
-<a-text id="remaining-text" 
-    value="Remaining:" 
-    position="0.6 0.5 0.01" 
-    width="1.5"
-    text="color: cyan; wrapCount: 20; font: mozillavr">
-</a-text>
-
-<!-- Boutons de choix interactifs -->
-<a-text id="choice1" 
-    value="I don't speak English" 
-    position="-1.8 -0.2 0.01" 
-    width="1.5"
-    class="clickableChoice"
-    text="color: lightblue; wrapCount: 20; font: mozillavr; width: 1.5"
-    event-set__mouseenter="_event: mouseenter; text.color: cyan"
-    event-set__mouseleave="_event: mouseleave; text.color: lightblue"
-   >
-</a-text>
-
-<a-text id="choice2" 
-    value="Where is the police station?" 
-    position="1 -0.2 0.01" 
-    width="1.5"
-    class="clickableChoice"
-    text="color: lightgreen; wrapCount: 20; font: mozillavr; width: 1.5"
-    event-set__mouseenter="_event: mouseenter; text.color: lime"
-    event-set__mouseleave="_event: mouseleave; text.color: lightgreen"
-    >
-</a-text>
-
-<!-- Bouton de fermeture -->
-<a-plane id="close" 
-class="close"
-position="0 -0.4 0.01" 
-width="0.6" 
-height="0.2" 
-color="red"
-text="value: Fermer; align: center; color: white; font: mozillavr; width: 2">
-</a-plane>
-        </a-plane>
+    <a-entity scale="" id="rig" movement-controls="constrainToNavMesh: true; controls: checkpoint, gamepad, trackpad, keyboard, nipple;" position="10 0 0">
+      <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
+        <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005" material="color: #202020; shader: flat">
+          <a-plane id="score-panel"  position="0.5 0.2 -1" width="0.3" height="0.1" color="#FFD700" material="shader: flat">
+            <a-text id="score" value="Score: 0" position="0 0.02 0" align="center" color="black" width="1" font="mozillavr">
+            </a-text>
+          </a-plane>
         </a-entity>
+      </a-entity>
+      <a-entity id="leftController" oculus-touch-controls="hand: left" thumbstick-move></a-entity>
+      <a-entity id="rightController" oculus-touch-controls="hand: right">
+        <a-entity raycaster="objects: .collidable" cursor></a-entity>
+      </a-entity>
+      <a-plane id="overlay" position="0 3 -2" visible="false"></a-plane>
+      <a-plane id="dialogue-box" position="0 2 -2" width="4" height="0.5" visible="false"material="color: black; opacity: 0.8; shader: flat"geometry="primitive: plane; width:5; height: 1.4">
+        <a-text id="dialogue-text" value="Hi! How can I help you?" position="0 0.2 0.01" width="2" align="center"text="color: white; wrapCount: 30; font: mozillavr"></a-text>
+        <a-text id="difficulty-text" value="Difficulty:" position="-1.4 0.5 0.01" width="1.5"text="color: yellow; wrapCount: 20; font: mozillavr"></a-text>
+        <a-text id="remaining-text" value="Remaining:" position="0.6 0.5 0.01" width="1.5"text="color: cyan; wrapCount: 20; font: mozillavr"></a-text>
+        <a-text id="choice1" value="I don't speak English" position="-1.8 -0.2 0.01" width="1.5"class="clickableChoice"text="color: lightblue; wrapCount: 20; font: mozillavr; width: 1.5"event-set__mouseenter="_event: mouseenter; text.color: cyan"event-set__mouseleave="_event: mouseleave; text.color: lightblue"></a-text>
+        <a-text id="choice2" value="Where is the police station?" position="1 -0.2 0.01" width="1.5"class="clickableChoice"text="color: lightgreen; wrapCount: 20; font: mozillavr; width: 1.5"event-set__mouseenter="_event: mouseenter; text.color: lime"event-set__mouseleave="_event: mouseleave; text.color: lightgreen"></a-text>
+        <a-plane id="close" class="close"position="0 -0.4 0.01" width="0.6" height="0.2" color="red"text="value: Fermer; align: center; color: white; font: mozillavr; width: 2">
+        </a-plane>
+      </a-plane>
+    </a-entity>
 
-        
 
 <a-entity id="npc1-container" position="6 0 50">
   <a-entity id="npc1-entity" gltf-model="#npc1" scale="0.2 0.2 0.2"></a-entity>
   <a-box id="npc1-hitbox" class="clickable" position="0 1 0" width="1" height="1.7" depth="1" opacity="0" transparent="true"></a-box>
 </a-entity>
 
+
 <a-entity id="npc2-container" position="7 0 50">
   <a-entity id="npc2-entity" gltf-model="#npc2" scale="0.5 0.5 0.5"></a-entity>
   <a-box id="npc2-hitbox" class="clickable" position="0 1 0" width="1" height="1.7" depth="1" opacity="0" transparent="true"></a-box>
 </a-entity>
+
 
 <a-entity id="npc3-container" position="5 0 50">
   <a-entity id="npc3-entity" gltf-model="#npc3" scale="0.5 0.5 0.5"></a-entity>
   <a-box id="npc3-hitbox" class="clickable" position="0 1 0" width="1" height="1.7" depth="1" opacity="0" transparent="true"></a-box>
 </a-entity>
 
-    <!-- Nav mesh. -->
     <a-entity nav-mesh normal-material visible="false" position="0 0 0" gltf-model="#navmesh"></a-entity>
     
     <!-- SKY -->
